--- a/css/mon_style.css
+++ b/css/mon_style.css
@@ -6,7 +6,7 @@
   font-family: Verdana;
 }
 body{
-  background: white;
+  background: white; /*Partie 1 - Q4 - b*/
 }
 
 /* ----------------------------------------- */
@@ -32,7 +32,7 @@ footer{
   position :fixed;
   bottom:0;
   width:94%;
-  height: 5%;
+  height: 10%;
 
   
 }
@@ -62,25 +62,17 @@ padding: 5px;
 }
 
 
-
-ul{
-  position :relative;
-  list-style-type: circle; 
-  padding:0;
-  margin:0;
-  
+strong{
+  color : rgb(168, 30, 30);
 }
 
-#list{
+#list, #list li{
 padding: 5px 10px;
 background-color: #EEEEEE;
 border: 1px solid #DDDDDD;
-display : table-cell;
+display:block;
+}
 
-}
-ol{
-  display:table-cell;
-}
 
 /* main */
 main .box {
@@ -231,18 +223,11 @@ border-bottom: 1px solid #ccc;
   }
 
   @media screen and (min-width: 980px){
-      section{
-          width: 80%;
-          box-shadow: 0px 0px 10px #bbb;
-      }
+      
       a:hover{
           color: #EA0;
       }
      
   }
 
-
-
-
-
-
+.tbody
